# go-svc-template

./: .editorconfig  .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum
.github/workflows/: ci.yml
cmd/serve-http/: BUILD.bazel  main.go
configs/: BUILD.bazel  config.example.yml
internal/repo/: BUILD.bazel  repo.go  repo_test.go
internal/service/: BUILD.bazel  service.go  service_test.go
internal/transport/: BUILD.bazel  grpc.go  http.go
pkg/config/: BUILD.bazel  module.go
pkg/logger/: BUILD.bazel  module.go
pkg/server/grpcfx/: BUILD.bazel  module.go
pkg/server/httpfx/: BUILD.bazel  module.go
proto/: BUILD.bazel  service.pb.go  service.proto
scripts/: add-dep.sh  build.sh  run.sh  update-deps.sh
