module(
    name = "go-svc-template",
    version = "1.0",
)

# Use default repos for rules_go and Gazelle (no io_bazel_rules_go alias)
bazel_dep(name = "rules_go", version = "0.54.0")
bazel_dep(name = "gazelle", version = "0.43.0")

# Set up a Go SDK toolchain
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.2")

# Load Gazelle’s go_deps extension for Go modules
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_spf13_cobra",
    "com_github_spf13_viper",
    "com_github_stretchr_testify",
    "org_golang_google_grpc",
    "org_uber_go_fx",
    "org_uber_go_zap",
)
