load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "repo",
    srcs = ["repo.go"],
    importpath = "github.com/froppa/go-svc-template/internal/repo",
    visibility = ["//:__subpackages__"],
    deps = ["@org_uber_go_fx//:fx"],
)

go_test(
    name = "repo_test",
    srcs = ["repo_test.go"],
    embed = [":repo"],
    deps = ["@com_github_stretchr_testify//assert"],
)
