load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "service",
    srcs = ["service.go"],
    importpath = "github.com/froppa/go-svc-template/internal/service",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/repo",
        "@org_uber_go_fx//:fx",
    ],
)

go_test(
    name = "service_test",
    srcs = ["service_test.go"],
    embed = [":service"],
    deps = [
        "//internal/repo",
        "@com_github_stretchr_testify//assert",
    ],
)
