load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["module.go"],
    importpath = "github.com/froppa/go-svc-template/pkg/config",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
        "@org_uber_go_fx//:fx",
    ],
)
